<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="40dp"
            android:textColor="	#f4a460"
            android:text="@string/jurado"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/juradojoven"/>

        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:textColor="	#f4a460"
            android:layout_height="wrap_content"
            android:text="@string/bioJurado"/>

        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:textStyle="bold|italic"
            android:textColor="	#f4a460"
            android:layout_height="wrap_content"
            android:text="@string/fraseJurado"/>

    </LinearLayout>
</ScrollView>