<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bios"
            android:layout_centerInParent="true"
            android:textColor="	#f4a460"
            android:textSize="34sp"
            />

      </RelativeLayout>

    <GridLayout
        android:id="@+id/maingrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="5dp"
        android:rowCount="3">

        <!--Fila 1, columna 1 -->
        <android.support.v7.widget.CardView
            card_view:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="#696969">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/diaz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/diaz"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>
        <!--Fila 1, columna 2-->
        <android.support.v7.widget.CardView
            android:backgroundTint="#696969"
            card_view:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/fary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fary"
                    android:layout_gravity="bottom|center"
                    android:textSize="16sp"

                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <!--Fila 2 Columna 1 -->
        <android.support.v7.widget.CardView
            android:backgroundTint="#696969"
            app:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/flores" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flores"
                    android:layout_gravity="bottom|center"
                    android:textSize="18sp"

                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <!--Fila 2 columna 2 -->
        <android.support.v7.widget.CardView
            android:backgroundTint="#696969"
            app:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/juradobuena" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jurado"
                    android:layout_gravity="bottom|center"
                    android:textSize="18sp"

                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>
        <!--Fila 3 columna 1 -->
        <android.support.v7.widget.CardView
            android:backgroundTint="#696969"
            app:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/montiel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/montiel"
                    android:layout_gravity="bottom|center"
                    android:textSize="18sp"

                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <!--Fila 3 columna 2 -->
        <android.support.v7.widget.CardView
            android:backgroundTint="#696969"
            app:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="122dp"
                    android:layout_height="80dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/pantoja" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pantoja"
                    android:layout_gravity="bottom|center"
                    android:textSize="18sp"

                    android:textStyle="bold" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>